--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "openai": "^3.1.0",
     "react": "^18.2.0",
