--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
+    "jspdf": "^2.5.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
