--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.1.0"
+  },
+  "vite": {
+    "rollupOptions": {
+      "external": [
+        "jspdf"
+      ]
+    }
   }
 }
