--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
