--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-ai/generativelanguage": "^1.0.0",
+    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "google-auth-library": "^9.0.0",
     "morgan": "^1.10.0"
   }
