--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.15.0",
     "sonner": "^0.6.2"
   },
