--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.2.3",
     "jspdf": "^2.5.1",
