--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,13 @@
 	"dependencies": {
 		"@google/generative-ai": "^0.2.1",
 		"@hono-rate-limiter/cloudflare": "^0.2.1",
-		"axios": "^1.6.8",
 		"cheerio": "^1.0.0-rc.12",
-		"cors": "^2.8.5",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
 		"express-rate-limit": "^7.1.5",
 		"google-auth-library": "^9.0.0",
 		"hono": "^4.6.4",
-		"hono-rate-limiter": "^0.4.0",
-		"morgan": "^1.10.0"
+		"hono-rate-limiter": "^0.4.0"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.0",
 		"typescript": "^5.6.3",
 		"wrangler": "^3.80.4"
 	}
